--- a/KiderWebApplication/Views/_ViewImports.cshtml
+++ b/KiderWebApplication/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using KiderWebApplication
 @using KiderWebApplication.Models
+@using KiderWebApplication.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
